--- a/styles.css
+++ b/styles.css
@@ -1,53 +1,65 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
+    font-size: 62.5%;
     background-color: #D5E1EF;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    height: 100vh;
+    justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 
 .card {
     background-color: #FFFFFF;
     border-radius: 20px;
-    width: 320px;
-    height: 497px;
+    width: 32.0em;
+    height: 49.7em;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
-    position: relative;
-    box-shadow: 0px 25px 25px rgba(0,0,0,0.0477);
+    box-shadow: 0 2.5em 2.5em rgba(0,0,0,0.0477);
 }
 
 .qr-code {
-    width: 288px;
-    height: 288px;
-    position: absolute;
-    top: 16px;
-}
-
-.qr-image {
+    width: 28.8em;
+    height: 28.8em;
     border-radius: 10px;
 }
 
 .text {
+    display: flex;
+    flex-direction: column;
+    gap: 1.6em;
     text-align: center;
-    position: absolute;
-    bottom: 40px;
+    margin: 2.4em 3.2em 4em 3.2em;
 }
 
 h2 {
+    font-size: 2.2em;
     font-family: "Outfit", sans-serif;
     font-weight: 700;
     color: #1F314F;
-    margin: 24px 16px 16px 16px;
 }
 
 p {
-    font-size: 15px;
+    font-size: 1.5em;
     font-family: "Outfit", sans-serif;
     font-weight: 400;
     color: #7D889E;
-    margin: 0px 32px 0px 32px;
+}
+
+.attribution { 
+    font-size: 1.1em; 
+    font-family: "Outfit", sans-serif;
+    text-align: center; 
+    margin-top: 2em;
+}
+
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
 }
